[package]
name = "chatroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive", "cargo"] }
mysql = "20.0.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"
